*   Mail: info@wordrider.net (issue tracker is preffered) *
*   Issue tracker: http://bugtracker.wordrider.net/       *
***********************************************************
Thanks to all individuals who reported bugs.

Legend :
Added - indicates new functionality or new part of distribution
Changed - indicates a change in using/behavior FreeRapid
Fixed - indicates a bug fix

XXth September 2009 - FreeRapid Downloader 0.83 Release Candidate
  Added : startup.properties file in FRD's directory - see comments in this file for more details
  Changed : minor GUI speed optimizations
  Changed : updated plugins to their latest versions
  Fixed : Close To Tray bug  http://bugtracker.wordrider.net/task/1158 [thanks to kiwichick!]
  Fixed : restore window size to maximized state does not work  

5th September 2009 - FreeRapid Downloader 0.83 beta 4
  Added : improvements and fixes to enable FRD using blind people - it's now compatible to Java Accessibility Bridge
         See http://java.sun.com/javase/technologies/accessibility/accessbridge/ for more details
         or here: http://a11y.netbeans.org/a11yDevGuide.html
  Added : SOCKS proxy support [thanks to Benjamin!!] - all urls in proxy list file has to be prefixed with $SOCKS$ or SOCKS:
          SOCKS5 authentication is experimental
  Added : added shell script setupproxy.sh in tools/socks to help with automatic creating list of SOCKS proxies for FRD
        [thanks to Benjamin!!]
  Added : added backup links.txt file (located in configuration folder), which stores all links you ever added into FreeRapid
  Fixed: problems with backup files

30th August 2009 - FreeRapid Downloader 0.83 beta 3
  Added : error message when launching FRD using GCJ
  Changed : connection timeout set from 100 to 120
  Changed : updated default plugins to their latest versions
  Changed : internal - Windows - removed dependency on Windows registry
  Changed : internal - upgraded SwingX components to the latest build