@@ -11,10 +11,11 @@ Added - indicates new functionality or new part of distribution
 Changed - indicates a change in using/behavior FreeRapid
 Fixed - indicates a bug fix
 
-XXth September 2009 - FreeRapid Downloader 0.83 Release Candidate
+20th September 2009 - FreeRapid Downloader 0.83 Release Candidate
   Added : startup.properties file in FRD's directory - see comments in this file for more details
   Changed : minor GUI speed optimizations
   Changed : updated plugins to their latest versions
+  Changed : updated all plugins to their actual states
   Fixed : Close To Tray bug  http://bugtracker.wordrider.net/task/1158 [thanks to kiwichick!]
   Fixed : restore window size to maximized state does not work  
 
